--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "docs",
+  "name": "docs-es",
+  "packageManager": "pnpm@7.9.0",
   "private": true,
+  "version": "0.22.1",
   "scripts": {
     "dev": "vitepress --port 3333 --open",
     "build": "nr prefetch && vitepress build && node .vitepress/scripts/build-pwa.mjs",
@@ -15,12 +17,20 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.26.1",
+    "@antfu/ni": "^0.17.2",
     "@iconify-json/carbon": "^1.1.7",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^18.7.3",
     "@unocss/reset": "^0.45.7",
     "@vitejs/plugin-vue": "latest",
     "esno": "^0.16.3",
     "fast-glob": "^3.2.11",
+    "fs-extra": "^10.1.0",
     "https-localhost": "^4.7.1",
+    "ohmyfetch": "^0.4.18",
+    "pathe": "^0.2.0",
+    "pnpm": "7.9.0",
     "unocss": "^0.45.7",
     "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
