--- a/netlify.toml
+++ b/netlify.toml
@@ -3,14 +3,8 @@
   NODE_VERSION = "16"
 
 [build]
-  publish = "docs/.vitepress/dist"
-  command = "npx pnpm@7.8.0 i --store=node_modules/.pnpm-store --no-frozen-lockfile && npm run docs:build"
-  ignore = "git diff --quiet $COMMIT_REF $CACHED_COMMIT_REF -- docs/ package.json pnpm-lock.yaml"
-
-[[redirects]]
-  from = "/new"
-  to = "https://stackblitz.com/fork/github/vitest-dev/vitest/tree/main/examples/basic?initialPath=__vitest__"
-  status = 302
+  publish = ".vitepress/dist"
+  command = "npx pnpm i --store=node_modules/.pnpm-store --no-frozen-lockfile && npm run build"
 
 [[redirects]]
   from = "/*"
