--- a/.github/workflows/ryu-cho.yml
+++ b/.github/workflows/ryu-cho.yml
@@ -30,7 +30,7 @@ jobs:
 
           # The head repo to track. This is the repository you want to
           # take a diff. Required.
-          head-repo: https://github.com/vitest-dev/vitest.git
+          head-repo: https://github.com/vitest-dev/vitest
 
           # The branch for the head repo. Optional. Defaults to `main`.
           head-repo-branch: main
